--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -11206,6 +11206,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\5Y2BGYCY\\2020JG005892.html}
 }
 
+@article{yuanIncreasedAtmosphericVapor2019,
+  title = {Increased Atmospheric Vapor Pressure Deficit Reduces Global Vegetation Growth},
+  author = {Yuan, Wenping and Zheng, Yi and Piao, Shilong and Ciais, Philippe and Lombardozzi, Danica and Wang, Yingping and Ryu, Youngryel and Chen, Guixing and Dong, Wenjie and Hu, Zhongming and Jain, Atul K. and Jiang, Chongya and Kato, Etsushi and Li, Shihua and Lienert, Sebastian and Liu, Shuguang and Nabel, Julia E. M. S. and Qin, Zhangcai and Quine, Timothy and Sitch, Stephen and Smith, William K. and Wang, Fan and Wu, Chaoyang and Xiao, Zhiqiang and Yang, Song},
+  date = {2019-08-01},
+  journaltitle = {Science Advances},
+  volume = {5},
+  number = {8},
+  pages = {eaax1396},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {2375-2548},
+  doi = {10.1126/sciadv.aax1396},
+  url = {http://advances.sciencemag.org/content/5/8/eaax1396},
+  urldate = {2021-08-26},
+  abstract = {Atmospheric vapor pressure deficit (VPD) is a critical variable in determining plant photosynthesis. Synthesis of four global climate datasets reveals a sharp increase of VPD after the late 1990s. In response, the vegetation greening trend indicated by a satellite-derived vegetation index (GIMMS3g), which was evident before the late 1990s, was subsequently stalled or reversed. Terrestrial gross primary production derived from two satellite-based models (revised EC-LUE and MODIS) exhibits persistent and widespread decreases after the late 1990s due to increased VPD, which offset the positive CO2 fertilization effect. Six Earth system models have consistently projected continuous increases of VPD throughout the current century. Our results highlight that the impacts of VPD on vegetation growth should be adequately considered to assess ecosystem responses to future climate conditions. Global vegetation greening trend stalled after the late 1990s due to increased atmospheric water demand. Global vegetation greening trend stalled after the late 1990s due to increased atmospheric water demand.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WKV78TLZ\\Yuan et al. - 2019 - Increased atmospheric vapor pressure deficit reduc.pdf;C\:\\Users\\Me\\Zotero\\storage\\Y6XY7JRC\\eaax1396.html}
+}
+
 @article{zaragoza-castellsClimatedependentVariationsLeaf2008,
   title = {Climate-Dependent Variations in Leaf Respiration in a Dry-Land, Low Productivity {{Mediterranean}} Forest: The Importance of Acclimation in Both High-Light and Shaded Habitats},
   shorttitle = {Climate-Dependent Variations in Leaf Respiration in a Dry-Land, Low Productivity {{Mediterranean}} Forest},
