--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -152,8 +152,8 @@ This gradient is more pronounced in dense canopies, including broad-leaf and mix
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 
 **Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy [@juckerCanopyStructureTopography2018].**
-Wind speeds increase with height across forest types from closed-canopy forests [@barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018] to savannas [@curtis_intracanopy_2019; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018], including all 22 forested NEON sites (Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`). Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
-The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and therefore greater potential for both water and heat loss (see section "Leaf temperature").
+Wind speeds increase with height across forest types, including closed and open-canopy forests  [Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`; @barnardSeasonalVariationCanopy2016a; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020a; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1 m s^-1^ at the top of the vertical profile, compared to  $\le$ 1.1 m s^-1^ at the bottom (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
+The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for both water and heat loss (see section "Leaf temperature").
 
 **Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.**
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Elevated CO~2~ may benefit understory seedlings operating close to their carbon compensation point, but given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
@@ -178,8 +178,7 @@ While $T_{leaf}$ is rarely exactly equal to $T_{air}$, it is most commonly withi
 
 **Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019].**
 High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a). Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance, which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and higher wind speeds (Fig. `r fig_leaf_T`b). Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD; notably, $g_b$ is influenced by windspeed and $g_s$ respond due to stomatal closure under high VPD.
-Therefore, under full sunlight, $T_{leaf}-T_{air}$ decreases with $g_b$, which increases with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a] and $g_s$ (Fig. `r fig_leaf_T`e); increases with leaf size (Fig. `r fig_leaf_T`d);
-decreases with and increases with VPD, or increases with RH (Fig. `r fig_leaf_T`c).
+Therefore, under full sunlight, $T_{leaf}-T_{air}$ decreases with $g_b$, which increases with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a] and $g_s$ (Fig. `r fig_leaf_T`e); increases with leaf size (Fig. `r fig_leaf_T`d); and increases with RH (Fig. `r fig_leaf_T`c).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in $T_{leaf}-T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/fig3_leafenergy.png)
 
