--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -108,7 +108,7 @@ Rising temperatures are profoundly influencing forests on many scales with poten
 Globally, temperatures have risen $1.2^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach or even exceed an average of $1.5^\circ$C in the next 20 years [@ipccClimateChangeWidespread2021], accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004; @ipccClimateChangeWidespread2021] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
 These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021], by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@rollinsonClimateSensitivityUnderstory2020; @breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. Collectively, these impacts may lead to reduction of forest carbon sequestration, as has already occurred in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn impact the the future trajectory of climate change [@bonan_ecological_2016], yet the degree of the impact remains uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
  
-**A great measure of uncertainity arises due to the differential impacts of rising temperatures on trees of differential size and canopy position, especially as because small understory trees exist in microenvironments that are substantially buffered by more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
+**A great measure of uncertainity arises due to the differential impacts of rising temperatures on trees of differential size and canopy position, especially as small understory trees exist in microenvironments that are substantially buffered by more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, containg trees of different sizes along various successional stages. 
 Overstory canopies play a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including buffering understory microclimates from extreme meteorological conditions [@zellweger_seasonal_2019]. This creates a vertical stratification of the biophysical environment such as temperature, light, wind, humidity and CO~2~ concentrations that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004b].
@@ -136,13 +136,13 @@ We focus on five key themes (Fig. `r fig_schematic`):
 In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from focal sites within the U.S. National Ecological Observatory Network [NEON; Figs. `r fig_NEON_vertical`-`r SIfig_NEON_all`; Supporting Information Methods `r appendix_NEON_methods`, @schimelNEONHierarchicallyDesigned2007].
 While the focus here is on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer canopy than to height [@lowmanForestCanopies1995]. 
 
-![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites with contrasting forest structures in the National Ecological Observatory Network (NEON)**. Height profiles from the growing season are shown for: (a) leaf area density, (b) proportion of sun leaves, (c) proportion light incident at the top of the canopy, and July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawai'i; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Vertical profiles in micrometeorological variables (d-h) at all six NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
+![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites with contrasting forest structures in the National Ecological Observatory Network (NEON)**. Height profiles from the growing season are shown for: (a) leaf area density, (b) proportion of sun leaves, (c) proportion light incident at the top of the canopy, and July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Vertical profiles in micrometeorological variables (d-h) at all six NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
 Foliage distribution is determined by the distribution of tree sizes and tree architecture within a forest, and leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient that are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
 Dense canopy forests composed of broadleaf trees can have high LAD in the upper canopy layers, as well as in the understory (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a) -- a pattern also common in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993].
 In temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top- vs. bottom-heavy foliage trees, and sometimes by dense understories [e.g., SCBI, Fig. `r fig_NEON_vertical`a, @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]. 
-In open-canopied forests, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
+In open-canopied forests ie. forests with lower density of trees and open canopies, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns and further influence the formation of closed vs. open canopy forests [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016; @hanberryOpenForestEcosystems2020a]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting LAD patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
@@ -182,7 +182,7 @@ Therefore, under full sunlight, $T_{leaf}-T_{air}$ decreases with $g_b$, which i
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in $T_{leaf}-T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/fig3_leafenergy.png)
 
-**Leaf energy balance is a tradeoff between water-use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
+**Leaf energy balance is a tradeoff between water uptake and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
 However, when leaf water demand (influenced by VPD and stomatal opening) exceeds the rate of supply, conservation of water ($g_s$-limitation) occurs at the cost of increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar radiation loads, but during $g_s$-limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @konradLeafTemperatureIts2021].
@@ -192,7 +192,7 @@ With adequate water, species with smaller leaves (higher $g_b$) and larger $g_s$
 
 **These basic biophysical principles shape the propensity for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher wind speeds (e.g., up to ~ 4 $ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ $4^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_b$ and $g_s$ (reviewed below) mediate the direct effects of solar radiation on upper canopy leaves (Fig. `r fig_leaf_T`a) and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
+However, higher wind speeds (e.g., up to ~ 4 $ms^{-1}$; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ $4^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_b$ and $g_s$ (reviewed below) mediate the direct effects of solar radiation on upper canopy leaves (Fig. `r fig_leaf_T`a) and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
 
 **Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
 Closed canopies with high LAI act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. The intensity of incoming radiation and VPD in the upper canopy, combined with hydraulic challenges of water transport to the tops of tall trees [**REFS**] can cause $g_s$-limitation and an increase in $T_{leaf}$. Therefore, we would expect a strong $T_{leaf}$ gradient  in closed canopies [@millerOnlySunlitLeaves2021]. In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
@@ -210,12 +210,8 @@ Thus, while understory and within-canopy shade leaves can remain cooler under lo
 Often, $T_{leaf}$ tracks $T_{air}$, *in large part due to vertical gradients in leaf traits and $g_s$,* and therefore differs little between understory and canopy.
 In forests with dense canopies, including tropical and temperate broadleaf forests, leaves experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopy than buffered lower-canopies. In some cases canopy leaves exceed the optima for photosynthesis ($T_{opt}$) and $T_{air}$ because of $g_s$-limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021; @niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. 
 In contrast, in open forests with lower LAI, lower-canopy $T_{leaf}$ can equal or even exceed upper canopy $T_{leaf}$, due to greater light transmission, vertical air mixing, and still air in the lower canopy and heating from the ground [Figs. `r fig_NEON_vertical`h, `r SIfig_NEON_all`b,e, @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020 (in review)]. 
+Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020]. 
 Greater $RH$ in the inner canopy can also increase $T_{leaf}$ relative to upper canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
-
-It is noteworthy that leaf and branch temperatures often differ substantially. For instance, exposed tropical tree bark can be much warmer than leaves [@pauTropicalForestTemperature2018; @stillImagingCanopyTemperature2021; @johnstonWhatLiesVertical2020]. 
-Thus, vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
-Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021; @macleanMicroclimcMechanisticModel2021].
 
 ## Leaf traits 
 
@@ -264,7 +260,7 @@ The vertical structure of microenvironments likely influences forest photosynthe
 
 Vertical gradients in the biophysical environment shape which plant strategies, or sets of traits, are competitive in canopy versus understory conditions, thereby shaping community composition across size classes. 
 Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-canopy traits [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. 
-For instance, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].However, exceptions exist: at least among evergreen species, shade tolerant species tend to have higher LMA than light demanding species, by contrast with the generally higher LMA for sun than shade leaves within canopies [@luskWhyAreEvergreen2008].
+For instance, across increasing tree size classes, there is an increase in the fractions of species that are deciduous [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018]. However, exceptions exist: at least among evergreen species, shade tolerant species tend to have higher LMA than light demanding species, by contrast with the generally higher LMA for sun than shade leaves within canopies [@luskWhyAreEvergreen2008].
 Further, the range in trait values can be several times greater in multi-species canopy than in understory species, based on their inherent species-specific traits and responses to environmental conditions. 
 Therefore, vertical gradients in $T_{leaf}$ and metabolism within forest ecosystems are underpinned by both intra- and inter-specific variation in traits. 
 
@@ -330,7 +326,7 @@ However, NSC reserves increase with tree size, such that larger trees have relat
 
 
 **Vertical gradients also affect the climate sensitivity of metabolism and growth.** 
-Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) than by low soil moisture in forests not experiencing soil drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
+Stomatal conductance tends to be more strongly limited by high atmospheric demand (high $T_{air}$ and VPD, low RH) even before soil water becomes limited in forests not experiencing drought [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Therefore, periods of high atmospheric demand--be these on time scales of hours, days, or seasons--tend to cause greater reductions in whole-tree transpiration and photosynthesis in tall trees that occupy canopy positions in relatively dense-canopy forests [@christoffersenLinkingHydraulicTraits2016; @garciaImportanceHydraulicStrategy2021]. This is consistent with the observation that $g_s$-limitation with $T_{air}$ increases with height in the canopy (Table 2). More active stomatal regulation of tall canopy trees [e.g., @mediavillaStomatalResponsesDrought2004]-- often combined with greater effective rooting depth--may offset greater xylem embolism risk [@olsonPlantHeightHydraulic2018; @garciaImportanceHydraulicStrategy2021; @chitra-tarakHydraulicallyvulnerableTreesSurvive2021] and lower capacity to adjust traits related to carbon metabolism to drought [@bartholomewSmallTropicalForest2020]. This results in decreasing carbon isotope discrimination, indicative of an increasingly conservative hydraulic strategy, with increasing tree height [Table 1, @mcdowellRelationshipTreeHeight2011].
 
 The interannual climate sensitivity of annual woody growth can be determined through analysis of tree-ring increments.
 While it is generally accepted that large, exposed trees display the greatest climate sensitivity and are therefore best for climate reconstructions [@frittsTreeRingsClimate1976], only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
@@ -351,7 +347,7 @@ While studies partitioning transpiration across forest vertical gradients are ra
 
 ![**Figure 5.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes.](schematics/ecosystem vertical partitioning/raw from Nobby/Fig_5_ET.png)
 
-**It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be sensitive to high temperatures-- at least under conditions of moderate to high VPD. Increases in canopy $T_{leaf}$ are shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
+**It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be sensitive to high temperatures-- at least under conditions of moderate to high VPD [@grossiordPlantResponsesRising2020]. Further, increases in canopy $T_{leaf}$ are also shown to reduce forest GPP in the tropics [@pauTropicalForestTemperature2018]. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity varies across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
 ## Implications [ & future research directions?]
 
@@ -364,7 +360,7 @@ The complex interwoven relations between the biophysical environment and biologi
 
 ### warming
 
-Warming impacts forests, from leaf metabolism to whole forest structure. Leaf level $T_{opt}$ is closely related ecosystem $T_{opt}$. Temperature limitations to leaf processes, such as VPD and gs-limitation, can modify ecosystem $T_{opt}$ if species do not acclimate, resulting in reduced carbon sequestration [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. At a metabolism level, leaf photosynthesis and respiration are coupled to photosynthetic thermal optima. Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. Exposed canopies are likely most vulnerable, as current growing season temperatures are equal to, or higher than photosynthetic optima of temperature and tropical forests [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018a; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019], and leaf temperatures may  approach lethal temperatures [e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021]. A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021], especially if RH in the understory does not inhibit transpirational cooling.  Thermal limits are especially narrow in tropical and mid-latitudes forests [@osullivanThermalLimitsLeaf2017]. A daytime temperature threshold of 32 degrees C has been suggested for long term climate sensitivity of global tropical forests, where reduced growth, and increased drought and tree mortality will lead to increased carbon source than sink [@sullivanLongtermThermalSensitivity2020].
+Warming impacts forests, from leaf metabolism to whole forest structure. Leaf level $T_{opt}$ is closely related ecosystem $T_{opt}$. Temperature limitations to leaf processes, such as VPD and gs-limitation, can modify ecosystem $T_{opt}$ if species do not acclimate, resulting in reduced carbon sequestration [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. At a metabolism level, leaf photosynthesis and respiration are coupled to photosynthetic thermal optima. Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. Exposed canopies are likely most vulnerable, as current growing season temperatures are equal to, or higher than photosynthetic optima of temperature and tropical forests [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018a; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019], and leaf temperatures may  approach lethal temperatures [e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021]. A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018], especially if RH in the understory does not inhibit transpirational cooling.  Thermal limits are especially narrow in tropical and mid-latitudes forests [@osullivanThermalLimitsLeaf2017]. A daytime temperature threshold of 32 degrees C has been suggested for long term climate sensitivity of global tropical forests, where reduced growth, and increased drought and tree mortality will lead to increased carbon source than sink [@sullivanLongtermThermalSensitivity2020].
 In the understory, warming is disproportionately affecting the less thermally-adapted plant species, resulting in associated plant community thermophilization [@zellwegerForestMicroclimateDynamics2020; @duqueThermophilizationAdultJuvenile2015; @greiserHidingClimateCharacterizing2019]. Canopy disturbance (see next section) along with a trend towards younger forests and again reduced tree growth associated with warming [McDowell et al. 2018; REFS] poses an increasing threat to the biodiversity of microrefugia that are otherwise buffered from extremes [@scheffersMicrohabitatsReduceAnimal2013; @greiserHidingClimateCharacterizing2019]. 
 
 ### canopy disturbance
